FDP-2736: a) make paging work a little better b) fix grants tab c) try to do something about long department names wrapping in facets

--- a/src/styles/scholars_search.less
+++ b/src/styles/scholars_search.less
@@ -112,6 +112,8 @@ span.facet-label {
 .facet-item span.badge:after{content:")"}
 .facet-item span.badge:before{content:"("}
 
+.facet-item span.badge { padding: 0px 0px; }
+
 .facet-item a {
   text-decoration: none;
   color: #333333;
